<resources>
    <string name="app_name">VideoService</string>
    <string name="avatar">UserIcon</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="playlists">Playlists</string>
    <string name="home">Home</string>
    <string name="other">Other</string>
    <string name="about">About</string>
    <string name="info">Info</string>
    <string name="upload">Upload</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>